--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 				<!--div class="col-lg-4 col-md-4 education">
 					<div class="feature_item">
 						<i class="flaticon-school"></i>
-						<!--h4>HSC</h4-->
+						<h4>HSC</h4>
 						<p><b></br>HSC, Ispahani Public School & College</b></p>
 						<p></p>
 						<p><b>Group:</b> Science</p>
@@ -297,11 +297,11 @@
 						<p><b>Passing Year:</b> 2013</p>
 
 					</div>
-				</div-->
-				<!--div class="col-lg-4 col-md-4 education">
+				</div>
+				<div class="col-lg-4 col-md-4 education">
 					<div class="feature_item">
 						<i class="flaticon-student"></i>
-						<!--h4>SSC</h4-->
+						<h4>SSC</h4>
 						<p><b></br>SSC, Gongamondal Raj Institution</b></p>
 						<p></p>
 						<p><b>Group:</b> Science</p>
