--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 							<a href="#Works" onclick="location.href='#Works';" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Works</a>
 							<ul class="dropdown-menu filter">
 								<li class="nav-item" data-filter=".graduate_thesis"><a class="nav-link" href="#Works" onclick="location.href='#Works';">Graduate Thesis</a></li>
-								<li class="nav-item" data-filter=".thesis"><a class="nav-link" href="#Works" onclick="location.href='#Works';">Undergrade Thesis</a></li>
-								<li class="nav-item" data-filter=".projects"><a class="nav-link" href="#Works" onclick="location.href='#Works';">Undergrade Projects</a></li>
+								<li class="nav-item" data-filter=".thesis"><a class="nav-link" href="#Works" onclick="location.href='#Works';">Undergrad Thesis</a></li>
+								<li class="nav-item" data-filter=".projects"><a class="nav-link" href="#Works" onclick="location.href='#Works';">Undergrad Projects</a></li>
 								<li class="nav-item" data-filter=".publications"><a class="nav-link" href="#Works" onclick="location.href='#Works';">Publications</a></li>
 								<li class="nav-item" data-filter=".research"><a class="nav-link" href="#Works" onclick="location.href='#Works';">Research</a></li>
 							</ul>
@@ -325,9 +325,9 @@
 					<ul class="filter list">
 						<li class="active" data-filter="*"><a href="#">All Categories</a></li>
 						<li data-filter=".graduate_thesis"><a href="#">Graduate Thesis</a></li>
-						<li data-filter=".projects"><a href="#">Undergrade Projects</a></li>
+						<li data-filter=".projects"><a href="#">Undergrad Projects</a></li>
 						<li data-filter=".other_projects"><a href="#">Others Projects</a></li>
-						<li data-filter=".thesis"><a href="#">Undergrade Thesis</a></li>
+						<li data-filter=".thesis"><a href="#">Undergrad Thesis</a></li>
 						<li data-filter=".publications"><a href="#">Publications</a></li>
 						<li data-filter=".research"><a href="#">Research Works</a></li>
 					</ul>
@@ -349,7 +349,7 @@
 							<img class="img-fluid" src="img/projects/projects-1.jpg" alt="">
 							<div class="projects_text">
 								<a href="https://github.com/jahid-jabed/Java_IDGenerator" target="_blank"><h4>Student ID Card Genarator</h4></a>
-								<p>Undergrade Project (Java)</p>
+								<p>Undergrad Project (Java)</p>
 							</div>
 						</div>
 					</div>
@@ -358,7 +358,7 @@
 							<img class="img-fluid" src="img/projects/projects-2.jpg" alt="">
 							<div class="projects_text">
 								<a href="https://github.com/jahid-jabed/cse-ruet" target="_blank"><h4>CSE RUET</h4></a>
-								<p>Undergrade Project (Laravel-Web)</p>
+								<p>Undergrad Project (Laravel-Web)</p>
 							</div>
 						</div>
 					</div>
@@ -367,7 +367,7 @@
 							<img class="img-fluid" src="img/projects/projects-3.jpg" alt="">
 							<div class="projects_text">
 								<a href="https://github.com/jahid-jabed/student_ruet" target="_blank"><h4>STUDENT RUET</h4></a>
-								<p>Undergrade Project (Laravel-Web)</p>
+								<p>Undergrad Project (Laravel-Web)</p>
 							</div>
 						</div>
 					</div>
@@ -385,7 +385,7 @@
 							<img class="img-fluid" src="img/projects/projects-5.jpg" alt="">
 							<div class="projects_text">
 								<a href="#" target="_blank"><h4>Improving Patient Cohort Identification</h4></a>
-								<p>Undergrade Thesis</p>
+								<p>Undergrad Thesis</p>
 							</div>
 						</div>
 					</div>
