--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
         <!--================End Courses Teach Area =================-->
 		
 		<!--================Latest My Team Area =================-->
-        <section class="latest_blog_area p_80">
+        <!--section class="latest_blog_area p_80">
         	<div class="container">
         		<div class="main_title">
         			<h2>My Team</h2>
@@ -688,7 +688,7 @@
         			</div>
         		</div>
         	</div>
-        </section>
+        </section-->
         <!--================End My Team Area =================-->
 		
 		<!--================Latest Courses Teach Area =================-->
