--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@
                             <div class="info_item">
                                 <i class="lnr lnr-home"></i>
                                 <h6>Dhaka, Bangladesh</h6>
-                                <p>21 A/E, 1st Colony, Mazar Road, Mirpur - 1</p>
+                                <p>Room No - 520, Department of Engineering<br>BGMEA University of Fashion & Technology, Nishatnagar, Turag,</p>
                             </div>
                             <div class="info_item">
                                 <i class="lnr lnr-phone-handset"></i>
