--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 				<div class="projects_inner row">
 					<div class="col-lg-3 col-md-4 col-sm-6 research graduate_thesis">
 						<div class="projects_item">
-							<img class="img-fluid" src="img/projects/projects-7.jpg" alt="">
+<!-- 							<img class="img-fluid" src="img/projects/projects-7.jpg" alt=""> -->
 							<div class="projects_text">
 								<a href="#" target="_blank"><h4>Study on CNN based Transfer Learning in Image Classification</h4></a>
 								<p>Graduate Thesis</p>
@@ -346,7 +346,7 @@
 					
 					<div class="col-lg-3 col-md-4 col-sm-6 projects other_projects">
 						<div class="projects_item">
-							<img class="img-fluid" src="img/projects/projects-1.jpg" alt="">
+<!-- 							<img class="img-fluid" src="img/projects/projects-1.jpg" alt=""> -->
 							<div class="projects_text">
 								<a href="https://github.com/jahid-jabed/Java_IDGenerator" target="_blank"><h4>Student ID Card Genarator</h4></a>
 								<p>Undergrad Project (Java)</p>
@@ -355,7 +355,7 @@
 					</div>
 					<div class="col-lg-3 col-md-4 col-sm-6 projects other_projects">
 						<div class="projects_item">
-							<img class="img-fluid" src="img/projects/projects-2.jpg" alt="">
+<!-- 							<img class="img-fluid" src="img/projects/projects-2.jpg" alt=""> -->
 							<div class="projects_text">
 								<a href="https://github.com/jahid-jabed/cse-ruet" target="_blank"><h4>CSE RUET</h4></a>
 								<p>Undergrad Project (Laravel-Web)</p>
@@ -364,7 +364,7 @@
 					</div>
 					<div class="col-lg-3 col-md-4 col-sm-6 projects other_projects">
 						<div class="projects_item">
-							<img class="img-fluid" src="img/projects/projects-3.jpg" alt="">
+<!-- 							<img class="img-fluid" src="img/projects/projects-3.jpg" alt=""> -->
 							<div class="projects_text">
 								<a href="https://github.com/jahid-jabed/student_ruet" target="_blank"><h4>STUDENT RUET</h4></a>
 								<p>Undergrad Project (Laravel-Web)</p>
@@ -373,7 +373,7 @@
 					</div>
 					<div class="col-lg-3 col-md-4 col-sm-6 other_projects">
 						<div class="projects_item">
-							<img class="img-fluid" src="img/projects/projects-4.jpg" alt="">
+<!-- 							<img class="img-fluid" src="img/projects/projects-4.jpg" alt=""> -->
 							<div class="projects_text">
 								<a href="https://github.com/jahid-jabed/Android_TouristEye" target="_blank"><h4>Tourist_Eye</h4></a>
 								<p>Hackathon 2019 Project (Android)</p>
@@ -382,7 +382,7 @@
 					</div>
 					<div class="col-lg-3 col-md-4 col-sm-6 thesis research publications">
 						<div class="projects_item">
-							<img class="img-fluid" src="img/projects/projects-5.jpg" alt="">
+<!-- 							<img class="img-fluid" src="img/projects/projects-5.jpg" alt=""> -->
 							<div class="projects_text">
 								<a href="#" target="_blank"><h4>Improving Patient Cohort Identification</h4></a>
 								<p>Undergrad Thesis</p>
@@ -391,7 +391,7 @@
 					</div>
 					<div class="col-lg-3 col-md-4 col-sm-6 publications research">
 						<div class="projects_item">
-							<img class="img-fluid" src="img/projects/projects-6.jpg" alt="">
+<!-- 							<img class="img-fluid" src="img/projects/projects-6.jpg" alt=""> -->
 							<div class="projects_text">
 								<a href="https://ieeexplore.ieee.org/document/8289090" target="_blank"><h4>The 12B8T Line Coding</h4></a>
 								<p>Publication (International Conference)</p>
@@ -400,7 +400,7 @@
 					</div>
 					<div class="col-lg-3 col-md-4 col-sm-6 other_projects">
 						<div class="projects_item">
-							<img class="img-fluid" src="img/projects/projects-7.jpg" alt="">
+<!-- 							<img class="img-fluid" src="img/projects/projects-7.jpg" alt=""> -->
 							<div class="projects_text">
 								<a href="https://github.com/jahid-jabed/online_bookstore" target="_blank"><h4>Online Bookstore</h4></a>
 								<p>Project (Laravel-Web)</p>
@@ -409,7 +409,7 @@
 					</div>
 					<div class="col-lg-3 col-md-4 col-sm-6 other_Projects">
 						<div class="projects_item">
-							<img class="img-fluid" src="img/projects/projects-8.jpg" alt="">
+<!-- 							<img class="img-fluid" src="img/projects/projects-8.jpg" alt=""> -->
 							<div class="projects_text">
 								<a href="https://github.com/jahid-jabed/Java_xBasic_Music-Player" target="_blank"><h4>Music Player</h4></a>
 								<p>Project (Java)</p>
@@ -418,7 +418,7 @@
 					</div>
 					<div class="col-lg-3 col-md-4 col-sm-6 other_Projects">
 						<div class="projects_item">
-							<img class="img-fluid" src="img/projects/projects-9.jpg" alt="">
+<!-- 							<img class="img-fluid" src="img/projects/projects-9.jpg" alt=""> -->
 							<div class="projects_text">
 								<a href="https://github.com/jahid-jabed/jahid-jabed.github.io" target="_blank"><h4>Personal Profile</h4></a>
 								<p>Project (Web)</p>
