--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
         			<div class="col-lg-2 col-md-3 col-sm-4  col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/courses/course-1.jpg" alt="">
+<!--         						<img class="img-fluid" src="img/courses/course-1.jpg" alt=""> -->
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -455,7 +455,7 @@
         			<div class="col-lg-2 col-md-3 col-sm-4  col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/courses/course-2.jpg" alt="">
+<!--         						<img class="img-fluid" src="img/courses/course-2.jpg" alt=""> -->
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -468,7 +468,7 @@
         			<div class="col-lg-2 col-md-3 col-sm-4  col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/courses/course-3.jpg" alt="">
+<!--         						<img class="img-fluid" src="img/courses/course-3.jpg" alt=""> -->
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -481,7 +481,7 @@
 					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/courses/course-4.jpg" alt="">
+<!--         						<img class="img-fluid" src="img/courses/course-4.jpg" alt=""> -->
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -494,7 +494,7 @@
 					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/courses/course-5.jpg" alt="">
+<!--         						<img class="img-fluid" src="img/courses/course-5.jpg" alt=""> -->
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -507,7 +507,7 @@
 					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/courses/course-6.jpg" alt="">
+<!--         						<img class="img-fluid" src="img/courses/course-6.jpg" alt=""> -->
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -520,7 +520,7 @@
 					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/courses/course-7.jpg" alt="">
+<!--         						<img class="img-fluid" src="img/courses/course-7.jpg" alt=""> -->
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -533,7 +533,7 @@
 					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/courses/course-8.jpg" alt="">
+<!--         						<img class="img-fluid" src="img/courses/course-8.jpg" alt=""> -->
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -546,7 +546,7 @@
 					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/courses/course_default.svg" alt="">
+<!--         						<img class="img-fluid" src="img/courses/course_default.svg" alt=""> -->
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -559,7 +559,7 @@
 					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/courses/course_default.svg" alt="">
+<!--         						<img class="img-fluid" src="img/courses/course_default.svg" alt=""> -->
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -572,7 +572,7 @@
 					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/courses/course_default.svg" alt="">
+<!--         						<img class="img-fluid" src="img/courses/course_default.svg" alt=""> -->
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -585,7 +585,7 @@
 					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/courses/course_default.svg" alt="">
+<!--         						<img class="img-fluid" src="img/courses/course_default.svg" alt=""> -->
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -598,7 +598,7 @@
 					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/courses/course_default.svg" alt="">
+<!--         						<img class="img-fluid" src="img/courses/course_default.svg" alt=""> -->
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -611,7 +611,7 @@
 					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/courses/course_default.svg" alt="">
+<!--         						<img class="img-fluid" src="img/courses/course_default.svg" alt=""> -->
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -624,7 +624,7 @@
 					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/courses/course_default.svg" alt="">
+<!--         						<img class="img-fluid" src="img/courses/course_default.svg" alt=""> -->
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -696,13 +696,16 @@
         	<div class="container">
         		<div class="main_title">
         			<h2>Certificates</h2>
+				<div class="l_blog_img">
+        				<img class="img-fluid" src="img/certificates/certificate-1.png" alt="">
+        			</div>
         			<p>I achived following certificates by enrolling into online courses from different educational platforms (such as Coursera, Stepik etc).</p>
         		</div>
         		<div class="row latest_blog_inner" style="text-align: center;">
         			<div class="col-lg-2 col-md-3 col-sm-4 col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/certificates/certificate-1.png" alt="">
+<!--         						<img class="img-fluid" src="img/certificates/certificate-1.png" alt=""> -->
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -714,7 +717,7 @@
         			<div class="col-lg-2 col-md-3 col-sm-4 col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/certificates/certificate-1.png" alt="">
+<!--         						<img class="img-fluid" src="img/certificates/certificate-1.png" alt=""> -->
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -726,7 +729,7 @@
         			<div class="col-lg-2 col-md-3 col-sm-4 col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/certificates/certificate-1.png" alt="">
+<!--         						<img class="img-fluid" src="img/certificates/certificate-1.png" alt=""> -->
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -738,7 +741,7 @@
 					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/certificates/certificate-1.png" alt="">
+<!--         						<img class="img-fluid" src="img/certificates/certificate-1.png" alt=""> -->
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -750,7 +753,7 @@
 					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/certificates/certificate-1.png" alt="">
+<!--         						<img class="img-fluid" src="img/certificates/certificate-1.png" alt=""> -->
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -762,7 +765,7 @@
 					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
         				<div class="l_blog_item">
         					<div class="l_blog_img">
-        						<img class="img-fluid" src="img/certificates/certificate-1.png" alt="">
+<!--         						<img class="img-fluid" src="img/certificates/certificate-1.png" alt=""> -->
         					</div>
         					<div class="l_blog_text">
         						<div class="date">
@@ -796,9 +799,9 @@
 								<p></p>
                             </div>
                             <div class="info_item">
-                                <i class="lnr lnr-envelope"></i>
-                                <h6><a href="#">jahid.jabed@gmail.com</a></h6>
+                                <i class="lnr lnr-envelope"></i>		
                                 <h6><a href="#">jahidul.islam@buft.edu.bd</a></h6>
+                                <h6><a href="#">jahid.jabed@gmail.com</a></h6>
                                 <p>Send me your query anytime!</p>
                             </div>
                 	</div>
