--- a/index.html
+++ b/index.html
@@ -696,9 +696,8 @@
         	<div class="container">
         		<div class="main_title">
         			<h2>Certificates</h2>
-				<div class="l_blog_img">
-        				<img class="img-fluid" src="img/certificates/certificate-1.png" alt="">
-        			</div>
+				<img class="img-fluid" src="img/certificates/certificate-1.png" style="width: 50%;" alt="">
+        			
         			<p>I achived following certificates by enrolling into online courses from different educational platforms (such as Coursera, Stepik etc).</p>
         		</div>
         		<div class="row latest_blog_inner" style="text-align: center;">
