--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
         	<div class="container">
         		<div class="main_title">
         			<h2>Certificates</h2>
-				<img class="img-fluid" src="img/certificates/certificate-1.png" style="width: 50%;" alt="">
+				<i class="flaticon-diploma-1"></i>
         			
         			<p>I achived following certificates by enrolling into online courses from different educational platforms (such as Coursera, Stepik etc).</p>
         		</div>
