--- a/index.html
+++ b/index.html
@@ -696,12 +696,12 @@
         	<div class="container">
         		<div class="main_title">
         			<h2>Certificates</h2>
-				<i class="flaticon-diploma-1"></i>
+				<i class="flaticon-diploma"></i>
         			
         			<p>I achived following certificates by enrolling into online courses from different educational platforms (such as Coursera, Stepik etc).</p>
         		</div>
         		<div class="row latest_blog_inner" style="text-align: center;">
-        			<div class="col-lg-2 col-md-3 col-sm-4 col-6">
+<!--         			<div class="col-lg-2 col-md-3 col-sm-4 col-6"> -->
         				<div class="l_blog_item">
         					<div class="l_blog_img">
 <!--         						<img class="img-fluid" src="img/certificates/certificate-1.png" alt=""> -->
@@ -712,8 +712,8 @@
         						</div>
         					</div>
         				</div>
-        			</div>
-        			<div class="col-lg-2 col-md-3 col-sm-4 col-6">
+<!--         			</div> -->
+<!--         			<div class="col-lg-2 col-md-3 col-sm-4 col-6"> -->
         				<div class="l_blog_item">
         					<div class="l_blog_img">
 <!--         						<img class="img-fluid" src="img/certificates/certificate-1.png" alt=""> -->
@@ -724,8 +724,8 @@
         						</div>
         					</div>
         				</div>
-        			</div>
-        			<div class="col-lg-2 col-md-3 col-sm-4 col-6">
+<!--         			</div> -->
+<!--         			<div class="col-lg-2 col-md-3 col-sm-4 col-6"> -->
         				<div class="l_blog_item">
         					<div class="l_blog_img">
 <!--         						<img class="img-fluid" src="img/certificates/certificate-1.png" alt=""> -->
@@ -736,8 +736,8 @@
         						</div>
         					</div>
         				</div>
-        			</div>
-					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
+<!--         			</div> -->
+<!-- 					<div class="col-lg-2 col-md-3 col-sm-4 col-6"> -->
         				<div class="l_blog_item">
         					<div class="l_blog_img">
 <!--         						<img class="img-fluid" src="img/certificates/certificate-1.png" alt=""> -->
@@ -748,8 +748,8 @@
         						</div>
         					</div>
         				</div>
-        			</div>
-					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
+<!--         			</div> -->
+<!-- 					<div class="col-lg-2 col-md-3 col-sm-4 col-6"> -->
         				<div class="l_blog_item">
         					<div class="l_blog_img">
 <!--         						<img class="img-fluid" src="img/certificates/certificate-1.png" alt=""> -->
@@ -760,8 +760,8 @@
         						</div>
         					</div>
         				</div>
-        			</div>
-					<div class="col-lg-2 col-md-3 col-sm-4 col-6">
+<!--         			</div> -->
+<!-- 					<div class="col-lg-2 col-md-3 col-sm-4 col-6"> -->
         				<div class="l_blog_item">
         					<div class="l_blog_img">
 <!--         						<img class="img-fluid" src="img/certificates/certificate-1.png" alt=""> -->
@@ -772,7 +772,7 @@
         						</div>
         					</div>
         				</div>
-        			</div>
+<!--         			</div> -->
         		</div>
         	</div>
         </section>
