--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
         			<div class="col-lg-6 col-md-6">
         				<div class="welcome_text">
         					<h4>About Myself</h4>
-        					<p style="text-align: justify;">I was born in a small village in Cumilla (A renowned city in Bangladesh). Though I was born in a small village, my dream is not small at all. Projecting to my dream after passing secondary and higher secondary I graduated with honors in Computer Science & Engineering from Rajshahi University of Engineering & Technology (RUET). Also, I have done my M.Sc. degree in Computer Science from Jahangirnagar University (JU). Currently, I'm a graduate student (M.Sc.) at Bangladesh University of Engineering and Technology (BUET) and working as a lecturer at BGMEA University of Fashion and Technology (BUFT).</p>
+        					<p style="text-align: justify;">Mr. Islam has been with BGMEA University of Fashion and Technology since March 1, 2020. Prior to his current position, he worked as a Lecturer at Prime University for one year.</p>
+						<p style="text-align: justify;">Mr. Islam earned his bachelor's degree in Computer Science and Engineering from Rajshahi University of Engineering and Technology. He received his M.Sc. degree in Computer Science from Jahangirnagar University. Mr. Islam is currently pursuing an M.Sc. Engg. degree in Computer Science and Engineering at Bangladesh University of Engineering and Technology in order to quench his thirst for knowledge.</p>
 							<div class="row projects-filter" style="text-align: center;">
 							<div class="col-lg-3 col-md-3 col-sm-6 col-6" style= "padding: 10px;">
         							<ul class="wel_item filter list">
@@ -110,7 +111,7 @@
 									<li></li>
         								<li data-filter=".graduate_thesis">
 										<a class="nav-link" href="#Works" onclick="location.href='#Works';" style="text-decoration: none; padding: 0px;">
-											Graduate</br>Thesis
+											Graduate</br>Project
 										</a>
 									</li>
         							</ul>
@@ -127,7 +128,7 @@
 									</li>
         							</ul>
         						</div>
-        						<div class="col-lg-3 col-md-3 col-sm-6 col-6" style= "padding: 10px;">
+        						<!--div class="col-lg-3 col-md-3 col-sm-6 col-6" style= "padding: 10px;">
         							<ul class="wel_item filter list">
         								<li><i class="lnr lnr-code"></i></li>
         								<li><h4>4</h4></li>
@@ -138,7 +139,7 @@
 										</a>
 									</li>
         							</ul>
-        						</div>
+        						</div-->
         						<div class="col-lg-3 col-md-3 col-sm-6 col-6" style= "padding: 10px;">
         							<ul class="wel_item filter list">
         								<li><i class="lnr lnr-book"></i></li>
@@ -156,16 +157,16 @@
         			</div>
         			<div class="col-lg-6 col-md-6">
         				<div class="tools_expert">
-        					<h3><br><br>Tools Expertness</h3>
+        					<h3><br><br>Skills</h3>
         					<div class="skill_main">
 							<div class="skill_item">
-								<h4 class="text-left"><b">Teaching Skills:</b> Teaching and Academic Responsibilities 
-								(<span class="counter">3</span> Years +).</h4>
+								<h4 class="text-left"><b">Teaching</b> 
+								(<span class="counter">4</span> Years +).</h4>
 								<div class="progress">
-									<div class="progress-bar" role="progressbar" aria-valuenow=33 aria-valuemin="0" aria-valuemax="100"></div>
+									<div class="progress-bar" role="progressbar" aria-valuenow=90 aria-valuemin="0" aria-valuemax="100"></div>
 								</div>
 							</div>
-							<div class="skill_item">
+							<!--div class="skill_item">
 								<h4 class="text-left"><b>Development Skills:</b> Web and Android Software Development 
 								(<span class="counter">45</span>%).</h4>
 								<div class="progress">
@@ -198,6 +199,27 @@
 								(<span class="counter">25</span>%).</h4>
 								<div class="progress">
 									<div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+								</div>
+							</div-->
+							<div class="skill_item">
+								<h4 class="text-left"><b>Research</b> 
+								(<span class="counter">80</span>%).</h4>
+								<div class="progress">
+									<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+								</div>
+							</div>
+							<div class="skill_item">
+								<h4 class="text-left"><b>Communication</b> 
+								(<span class="counter">80</span>%).</h4>
+								<div class="progress">
+									<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+								</div>
+							</div>
+							<div class="skill_item">
+								<h4 class="text-left"><b>Management</b> 
+								(<span class="counter">85</span>%).</h4>
+								<div class="progress">
+									<div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
 								</div>
 							</div>
 						</div>
